# LightEnergyManagementSystem

./: .gitignore  LICENSE  README.md
.github/workflows/: flutter.yml  platformio.yml  rust.yml
LampController/: README.md  generate_proto_files.sh  platformio.ini
LampController/include/: ble_connection.h  lamp_controller.h  lamp_controller.pb.h  lamp_controller.proto  pwm_handler.h
LampController/include/proto/: light_energy_management_system.pb.h  light_energy_menagment_system.pb.h
LampController/src/: ble_connection.cc  lamp_controller.cc  lamp_controller.pb.c  light_energy_management_system.pb.c  light_energy_menagment_system.pb.c  main.cpp  pwm_handler.cc
LocalRpi/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  gcc11.sh
LocalRpi/inc/: ble_connection.h  lamp_controller.pb.h
LocalRpi/src/: ble_connection.cc  ble_connection.rs  hello.cpp  hello.cxx  lamp_controller.pb.cc  lamp_controller.proto  lib.rs  local_rpi.rs  main.cc  main.rs  mqtt_connection.rs
ServerRpi/: .gitignore  Cargo.toml  README.md  build.rs  setup_mosquitto_broker.sh
ServerRpi/src/: db_handler.rs  lib.rs  light_energy_menagment_system.proto  main.rs  mqtt_connection.rs  proto_utils.rs  server_rpi.rs
mobile_app/: README.md  build.yaml  generate_proto_files.sh  pubspec.yaml
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/lib/: main.dart  mobile_app.dart  mqtt_connection.dart  utils.dart
mobile_app/lib/proto/: light_energy_management_system.pb.dart  light_energy_management_system.pbenum.dart  light_energy_management_system.pbjson.dart  light_energy_management_system.pbserver.dart
mobile_app/lib/widgets/: device_card.dart  device_measurements_graph.dart  device_name_chage_form.dart  devices_list.dart
mobile_app/test/: mqtt_connection_test.dart  widget_test.dart
mobile_app/windows/runner/: Runner.rc
proto/: light_energy_management_system.proto
