[package]
name = "LocalRpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
async-trait = "0.1.57"
log = "0.4.17"
bitflags = "1.3.2"
thiserror = "1.0.35"
uuid = "1.1.2"
serde_cr = { package = "serde", version = "1.0.145", features = ["derive"], default-features = false, optional = true }
serde_bytes = { version = "0.11.7", optional = true }
dashmap = "5.4.0"
futures = "0.3.24"
static_assertions = "1.1.0"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
rand = "0.8.5"
pretty_env_logger = "0.4.0"
dbus = "0.9.6"
bluez-async = "0.6.0"
protobuf = "3"
paho-mqtt = "0.11.1"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
