[package]
name = "ServerRpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"