[package]
name = "ServerRpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
futures = "0.3.24"
futures-util = "0.3.25"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
protobuf = "3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rumqttc = "0.17.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"